--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,12 @@
   <groupId>com.nci</groupId>
   <artifactId>smart-library</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Archetype - smart-library</name>
+    <packaging>pom</packaging>
+    <name>Archetype - smart-library</name>
   <url>http://maven.apache.org</url>
+    <modules>
+        <module>library-client</module>
+        <module>library-proto</module>
+        <module>library-server</module>
+    </modules>
 </project>
